--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
